fixed mobile flicker issue

--- a/app/Components/sidebar/Sidebar.css
+++ b/app/Components/sidebar/Sidebar.css
@@ -76,10 +76,6 @@
   }
 
   .nav__toggle {
-    display: block;
-    position: absolute;
-    left: 1rem;
-    top: 50%;
-    transform: translateY(-50%);
+    display: none;
   }
 }
