--- a/app/globals.css
+++ b/app/globals.css
@@ -75,12 +75,9 @@
     textarea {
         font-family: var(--body-font);
         font-size: var(--normal-font-size);
-        background-image: url('../public/images/bg-image.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
+        background-color: black; /* fallback in case image fails */
     }
+
 
     body{
         background-color: var(--body-color);
@@ -204,3 +201,18 @@
       overflow-x: hidden;
       width: 100vw;
 }
+
+    .fixed-background {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100dvh;
+        width: 100vw;
+        background-image: url('../public/images/bg-image.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        z-index: -10;
+        pointer-events: none;
+    }
+
